--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -4,61 +4,63 @@
 
 <body>
 
-    <table style='width:100%;' >
-        <!-- <td style='width:25%; text-align: center;'>
-        &nbsp;<img src="\static\icon\sashimi.png"><br><br>
-        &nbsp;<img src="\static\icon\burger.png"><br><br>
-        &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
-        &nbsp;<img src="\static\icon\noodles.png">
-    </td> -->
-  </td>
-  <td>
-  <div class="text-center" >
-      <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="masthead mb-auto">
-          
-          <div id="logo">
-            <font size='10' color="black" face='Comic Sans MS'>R &nbsp;. &nbsp;I &nbsp;. &nbsp;P</font>
-            <div style="margin-top: 10px;"></div>
-            <font size='7' color= "black" face='Comic Sans MS'>Restaurant &nbsp;&nbsp;&nbsp;&nbsp;In &nbsp;&nbsp;&nbsp;&nbsp;Program</font>
-            <div style='margin-top:30px'></div>
+  <table style='width:100%;'>
 
-			<div id="menu">
-				<ul>
-					<button class='btn btn-outline-dark'><a href="index"><font size='4' color="black" face='Comic Sans MS'>R I P 만의 기능</font></a></button>
-					<button class='btn btn-outline-dark'><a href="board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000"><font size='4' color="black" face='Comic Sans MS'>부대 모든 음식점</font></a></button>
-					<button class='btn btn-outline-dark'><a href="search"><font size='4' color="black" face='Comic Sans MS'>직접검색</font></a></button>
-				</ul>
-			</div>
-		</div>
-            
-          
-        </header>
-    
-        
-        <p class="lead">
-          <div class='container' width='600px' style='margin-top:20px'>
-    
-    
-            <!-- <img src="/static/icon/menu1.png" onclick="location.href='/rest/index'"> -->
-            <img src="/static/icon/menu1.png" width="370px" height="370px" onclick="location.href='/rest/index'">
-            <div style="margin-top: 30px;"></div>
-            <font face='Comic Sans MS' class="cover-heading" style='margin-top:30px; color:black'>Welcome to R I P</font>
-            <p class="lead" style="color: black;"><img src="\static\icon\onigiri.png" width="60px" height="60px" >&nbsp;&nbsp; 여러분의 점심시간을 한층 여유롭게 만들어줄 사이트입니다! &nbsp;&nbsp;<img src="\static\icon\onigiri.png" width="60px" height="60px"></p>
-          
-          
-        </p>
-        </main>
-      </div>
     </td>
-  <!-- <td style='width:25%; text-align: center;'>
-          &nbsp;<img src="\static\icon\rice.png"><br/><br>
-          &nbsp;<img src="\static\icon\spaghetti.png"><br/><br>
-          &nbsp;<img src="\static\icon\taco.png"><br/><br>
-          &nbsp;<img src="\static\icon\onigiri.png">
-  </td> -->
-</table>
+    <td>
+      <div class="text-center">
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+          <header class="masthead mb-auto">
 
-</div>
+            <div id="logo">
+              <font size='10' color="#3D4449" face='comic sans ms'>R . I . P</font>
+              <div style="margin-top: 10px;"></div>
+              <font size='7' color="#3D4449" face='comic sans ms'>Restaurant In Program</font>
+              <div style='margin-top:30px'></div>
+
+              <div id="menu" >
+                <ul >
+                  <button class='btn btn-default' style="width: 150px;"><a href="index"style='text-decoration:none;'>
+                      <font size='3' color="#7F888F" face='Cookie'><strong>R I P 만의 기능</strong></font>
+                    </a></button>
+                  <button class='btn btn-default'style="width: 150px;"><a style='text-decoration:none'
+                      href="board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000">
+                      <font size='3' color="#7F888F" face='Cookie'><strong>부대 모든 음식점</strong></font>
+                    </a></button>
+                  <button class='btn btn-default'style="width: 150px;"><a href="search" style='text-decoration:none'>
+                      <font size='3' color="#7F888F" face='Cookie'><strong>직접검색</strong></font>
+                    </a></button>
+                </ul>
+              </div>
+            </div>
+
+
+          </header>
+
+
+          <p class="lead">
+            <div class='container' width='600px' style='margin-top:20px'>
+
+
+
+              <img src="/static/icon/menu1.png" width="370px" height="370px" >
+              <div style="margin-top: 30px;"></div>
+              <font size='5'face='Nanum Pen Script' class="cover-heading" style='margin-top:30px; color:#7F888F'>Welcome to R I P
+              </font>
+              <p class="lead" style="color: #3D4449; font-family: Nanum Pen Script;font-size:xx-large;">
+                <img src="\static\icon\onigiri.png" width="60px" height="60px">&nbsp;&nbsp; 여러분의 점심시간을 한층 여유롭게 만들어줄 사이트입니다! &nbsp;&nbsp;
+                <img src="\static\icon\onigiri.png" width="60px" height="60px">
+              </p>
+            </div>
+
+
+          </p>
+          </main>
+        </div>
+    </td>
+
+  </table>
+
+  </div>
 </body>
 {% endblock %}
