--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -4,87 +4,79 @@
 
 
 
-  <table style='width:100%;'>
-    <td style='width:25%; text-align: center;'>
-      &nbsp;<img src="\static\icon\sashimi.png"><br><br>
-      &nbsp;<img src="\static\icon\burger.png"><br><br>
-      &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
-      &nbsp;<img src="\static\icon\kimchi.png"><br><br>
-      &nbsp;<img src="\static\icon\rice.png"><br /><br>
-      &nbsp;<img src="\static\icon\noodles.png">
-    </td>
-    <td style="vertical-align: top;">
-      <div class="text-center">
-        <dv class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-          <header class="masthead mb-auto">
-            <div class="inner">
-              <font size="50em" face="Comic Sans MS" color="Black">R . I . P <br>Restaurant&nbsp; In&nbsp; Program
-              </font><br>
+<table style='width:100%;'>
 
-              <div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-
-                </div>
-              </div>
-              <div class='container'>
-                <div style='margin-top:30px'>
-
-                </div>
-              </div>
-            </div>
-          </header>
-          <main role="main" class="inner cover">
-            <div style='margin-top:40px;'>
-            </div>
-            <p class="lead">
-              <div class='container' width='600px'>
-                <img type='image/png' width="60" height="60" src='/static/icon/menu2.png' />&nbsp;
-                <font size="30.2em" face="Comic Sans MS" color="Black">&nbsp; 주요기능 &nbsp;</font>
-                <img type='image/png' width="60" height="60" src='/static/icon/menu2.png' />&nbsp;<br>
-                <div style='margin-top:40px'></div>
-                <button class='btn btn-dark' onclick="location.href='/rest/board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000'">리스트</button>
-                <button class='btn btn-outline-dark'>부산대 주변 모든 음식점을 보실 수 있습니다.</button>
-                <div style='margin-top:50px'></div>
-                <button class='btn btn-dark' onclick="location.href='/rest/search'">필터링</button>
-                <button class='btn btn-outline-dark'>식당 카테고리와 거리를 선택할 수 있습니다.</button>
-                <div style='margin-top:120px'></div>
-              </div>
-              <div>
-
-                <div>
-                  <table style="width:100%; " >
-                    <tr >
-                      {% for data in rand_data %}
-                      <td style="width:20%;vertical-align: top;"><a href="detail?idno={{data.5}}"><img src="data:;base64,{{data.4}}"
-                            width='130px' height='130px'><br /><br><button
-                            class='btn btn-dark'>{{data.0}}</button></a></td>
-
-                      {% endfor %}
-
-
-                    </tr>
-                  </table>
-                </div>
-              </div>
-
-            </p>
-          </main>
-          <div>
+  <td style="vertical-align: top;">
+    <div class="text-center">
+      <dv class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="masthead mb-auto">
+          <div class="inner">
+            
+            <font size='7' color="#3D4449" face='comic sans ms'>Restaurant In Program</font>
           </div>
-          </footer>
-      </div>
-      </div>
-    </td>
-    <td style='width:25%; text-align: center;'>
-      &nbsp;<img src="\static\icon\rice.png"><br /><br>
-      &nbsp;<img src="\static\icon\spaghetti.png"><br /><br>
-      &nbsp;<img src="\static\icon\taco.png"><br /><br>
-      &nbsp;<img src="\static\icon\takoyaki.png"><br /><br>
-      &nbsp;<img src="\static\icon\tempura.png"><br /><br>
-      &nbsp;<img src="\static\icon\onigiri.png">
-    </td>
-    </table>
+        </header>
+        <main role="main" class="inner cover" style='margin-top:20px;'>
+          <p class="lead">
+            <div class='container' width='600px'>
+              <img type='image/png' width="60" height="60" src='/static/icon/shop.png' />&nbsp;
+              <font size="30.2em" face="Cookie" color="#3D4449">&nbsp; 주요기능 &nbsp;</font>
+              <img type='image/png' width="60" height="60" src='/static/icon/shop.png' />&nbsp;<br>
+              <div style='margin-top:40px'></div>
+              <button class='btn btn-default'
+                style='font-family: Cookie;font-size:x-large;color:#3D4449;width:100px;margin-left: 50px;'
+                onclick="location.href='/rest/board?no=1&search_word=&cate0=한식&cate1=중식&cate2=양식&cate3=일식&cate4=간식&cate5=도시락&cate6=분식&cate7=뷔페&cate8=아시아음식&cate9=술집&cate10=치킨&cate11=패밀리레스토랑&cate12=패스트푸트&cate13=퓨전요리&cate14=카페&distance=1000'">리스트</button>
+              <a class='btn btn-white'
+                style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px'>- 부산대 주변 모든 음식점을 보실 수
+                있습니다.</a>
+              <div style='margin-top:20px'></div>
+              <button class='btn btn-default'
+                style='font-family: Cookie;font-size:x-large;color:#3D4449;width:100px;margin-left: 50px;'
+                onclick="location.href='/rest/search'">필터링</button>
+              <button class='btn btn-white'
+                style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px'>- 식당 카테고리와 거리를 선택할 수
+                있습니다.</button>
+
+            </div>
+            <div>
+
+              <div class='container' style="width:1500px;margin-top:50px;">
+                <table style="width:100%; ">
+                  <tr>
+                    <td><a class='underline' style='font-family: Nanum Pen Script;font-size:xx-large;'>오늘 뭐 먹지? 고민하지말고
+                        여기서
+                        고르자!</a></td>
+                  </tr>
+                </table>
+
+                <table style="width:100%; margin-top: 20px;">
+                  <tr>
+                    {% for data in rand_data %}
+                    <td style="width:20%;vertical-align: top;">
+                      <a href="detail?idno={{data.5}}" style="text-decoration:none">
+                        <img src="data:;base64,{{data.4}}" width='130px' height='130px'><br /><br>
+                        <p class='underline' style='font-family: Nanum Pen Script;font-size:large;'>{{data.0}}</p>
+                      </a>
+                    </td>
+
+                    {% endfor %}
+
+
+                  </tr>
+                </table>
+              </div>
+
+            </div>
+
+          </p>
+        </main>
+        <div>
+        </div>
+        </footer>
+    </div>
+    </div>
+  </td>
+
+</table>
 </body>
 {% endblock %}
 
