--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -4,105 +4,92 @@
 {% block content %}
 
 <body>
-    <table style='width:100%;' >
-            <td style='width:25%; text-align: center;'>
-            &nbsp;<img src="\static\icon\sashimi.png"><br><br>
-            &nbsp;<img src="\static\icon\burger.png"><br><br>
-            &nbsp;<img src="\static\icon\bibimbap.png"><br><br>
-            &nbsp;<img src="\static\icon\kimchi.png"><br><br>
-            &nbsp;<img src="\static\icon\rice.png"><br/><br>
-            &nbsp;<img src="\static\icon\noodles.png">
-        </td>
-        <form class="form-inline my-2 my-lg-0" action="board" method="GET">
-        <td style='width:50%; text-align: center; vertical-align:top;'>
-                <img src="\static\icon\삼겹살.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="\static\icon\감자튀김.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="\static\icon\김치찌개.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="\static\icon\낚지볶음.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="\static\icon\삼겹살.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="\static\icon\두루치기.jpg" style="width:120px; height:120px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <div class="container" align='center' style='margin-top:150px; width:700px'>
-            <button type="button" style="width:320px; height:50px;" class="btn btn-outline-dark">카테고리를 선택하세요 (복수선택 가능)</button>
-            <div style='margin-top:30px'></div>
-            <div class='input_chk' style="width:700px; color: black;"> 
-            
-                
-                <input type="checkbox" name='cate0' value='한식' class='chk'>
-                <label for='check' style="font-size:1.2em; ">한식</label>&nbsp;&nbsp;
+    <div class='container'>
+        <table style='width:100%;'>
 
-                <input type="checkbox" name='cate1' value='중식' class='chk'>
-                <label for='check' style="font-size:1.2em;">중식</label>&nbsp;&nbsp;
-
-                <input type="checkbox" name='cate2' value='양식' class='chk'>
-                <label for='check' style="font-size:1.2em;">양식</label>&nbsp;&nbsp;
-
-                <input type="checkbox" name='cate3' value='일식' class='chk'>
-                <label for='check' style="font-size:1.2em;">일식</label>
-
-                <input type="checkbox" name='cate4' value='간식' class='chk'>
-                <label for='check' style="font-size:1.2em;">간식</label><br><br>
-
-                <input type="checkbox" name='cate5' value='도시락' class='chk'>
-                <label for='check' style="font-size:1.2em;">도시락</label>
-
-                <input type="checkbox" name='cate6' value='분식' class='chk'>
-                <label for='check' style="font-size:1.2em;">분식</label>
-
-                <input type="checkbox" name='cate7' value='뷔페' class='chk'>
-                <label for='check' style="font-size:1.2em;">뷔페</label>
-
-                <input type="checkbox" name='cate8' value='아시아음식' class='chk'>
-                <label for='check' style="font-size:1.2em;">아시아음식</label><br><br>
-
-                <input type="checkbox" name='cate9' value='술집' class='chk'>
-                <label for='check' style="font-size:1.2em;">술집</label>
-
-                <input type="checkbox" name='cate10' value='치킨' class='chk'>
-                <label for='check' style="font-size:1.2em;">치킨</label>
-
-                <input type="checkbox" name='cate11' value='패밀리레스토랑' class='chk'>
-                <label for='check' style="font-size:1.2em;">패밀리레스토랑</label><br><br>
-
-                <input type="checkbox" name='cate12' value='패스트푸드' class='chk'>
-                <label for='check' style="font-size:1.2em;">패스트푸드</label>
-
-                <input type="checkbox" name='cate13' value='퓨전요리' class='chk'>
-                <label for='check' style="font-size:1.2em;">퓨전요리</label>
-
-                <input type="checkbox" name='cate14' value='카페' class='chk'>
-                <label for='check' style="font-size:1.2em;">카페</label>
+            <form class="form-inline my-2 my-lg-0" action="board" method="GET">
+                <td align='center' style='width:50%; vertical-align:top;'>
+                    <div align='center' style='margin-top:16px'>
+                        <font size='7' color="#3D4449" face='comic sans ms'>Restaurant In Program</font>
+                </div>
+                    <div class="container" align='center' style='margin-top:50px; width:700px'>
+                        <a style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px' class="btn btn-white">카테고리를 선택하세요
+                            (복수선택 가능)</a>
+                        <div style='margin-top:30px'></div>
+                        <div class='input_chk' style="width:700px; color: #7F888F;">
 
 
-            </div>
-                <div style='margin-top:70px'></div>
-                <button type="button" style="width:180px; height:50px;" class="btn btn-outline-dark">거리를 설정하세요.</button><br>
-                <select name="distance" style="width:80px; margin-top:30px;">
-                    <option value="100">100m</option>
-                    <option value="200">200m</option>
-                    <option value="300">300m</option>
-                    <option value="400">400m</option>
-                    <option value="500">500m</option>
-                </select >&nbsp;<br><br>
-                
-                <button class = 'btn btn-dark' type="submit" >통합검색</button> &nbsp;&nbsp;
+                            <input type="checkbox" id='cb1' name='cate0' value='한식' class='chk'>
+                            <label for='cb1' style="font-size:1.2em; ">한식</label>&nbsp;&nbsp;
+
+                            <input type="checkbox" name='cate1' value='중식' class='chk'>
+                            <label for='check' style="font-size:1.2em;">중식</label>&nbsp;&nbsp;
+
+                            <input type="checkbox" name='cate2' value='양식' class='chk'>
+                            <label for='check' style="font-size:1.2em;">양식</label>&nbsp;&nbsp;
+
+                            <input type="checkbox" name='cate3' value='일식' class='chk'>
+                            <label for='check' style="font-size:1.2em;">일식</label>&nbsp;&nbsp;
+
+                            <input type="checkbox" name='cate4' value='간식' class='chk'>
+                            <label for='check' style="font-size:1.2em;">간식</label><br><br>
+
+                            <input type="checkbox" name='cate5' value='도시락' class='chk'>
+                            <label for='check' style="font-size:1.2em;">도시락</label>
+
+                            <input type="checkbox" name='cate6' value='분식' class='chk'>
+                            <label for='check' style="font-size:1.2em;">분식</label>
+
+                            <input type="checkbox" name='cate7' value='뷔페' class='chk'>
+                            <label for='check' style="font-size:1.2em;">뷔페</label>
+
+                            <input type="checkbox" name='cate8' value='아시아음식' class='chk'>
+                            <label for='check' style="font-size:1.2em;">아시아음식</label><br><br>
+
+                            <input type="checkbox" name='cate9' value='술집' class='chk'>
+                            <label for='check' style="font-size:1.2em;">술집</label>
+
+                            <input type="checkbox" name='cate10' value='치킨' class='chk'>
+                            <label for='check' style="font-size:1.2em;">치킨</label>
+
+                            <input type="checkbox" name='cate11' value='패밀리레스토랑' class='chk'>
+                            <label for='check' style="font-size:1.2em;">패밀리레스토랑</label><br><br>
+
+                            <input type="checkbox" name='cate12' value='패스트푸드' class='chk'>
+                            <label for='check' style="font-size:1.2em;">패스트푸드</label>
+
+                            <input type="checkbox" name='cate13' value='퓨전요리' class='chk'>
+                            <label for='check' style="font-size:1.2em;">퓨전요리</label>
+
+                            <input type="checkbox" name='cate14' value='카페' class='chk'>
+                            <label for='check' style="font-size:1.2em;">카페</label>
+
+
+                        </div>
+                        <div style='margin-top:70px'></div>
+                        <a style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px' class="btn btn-white" >거리를
+                            설정하세요.</a><br>
+                        <select name="distance" style=" margin-top:30px;">
+                            <option value="100">100m</option>
+                            <option value="200">200m</option>
+                            <option value="300">300m</option>
+                            <option value="400">400m</option>
+                            <option value="500">500m</option>
+                        </select>&nbsp;<br><br>
+
+                        <button class='btn btn-dark' type="submit">통합검색</button> &nbsp;&nbsp;
             </form>
-    </td>
-    <td style='width:25%; text-align: center;'>
-            &nbsp;<img src="\static\icon\rice.png"><br/><br>
-            &nbsp;<img src="\static\icon\spaghetti.png"><br/><br>
-            &nbsp;<img src="\static\icon\taco.png"><br/><br>
-            &nbsp;<img src="\static\icon\takoyaki.png"><br/><br>
-            &nbsp;<img src="\static\icon\tempura.png"><br/><br>
-            &nbsp;<img src="\static\icon\onigiri.png">
-    </td>
-        </div>
-        </div>
+            </td>
+
+    </div>
+    </div>
 
 
     </div>
     </div>
-</table>
+    </table>
+    </div>
 </body>
 {% endblock %}
-</html>
 
+</html>
