--- a/templates/rest/home.html
+++ b/templates/rest/home.html
@@ -28,7 +28,7 @@
                       <font size='3' color="#7F888F" face='Cookie'><strong>부대 모든 음식점</strong></font>
                     </a></button>
                   <button class='btn btn-default'style="width: 150px;"><a href="search" style='text-decoration:none'>
-                      <font size='3' color="#7F888F" face='Cookie'><strong>직접검색</strong></font>
+                      <font size='3' color="#7F888F" face='Cookie'><strong>필터검색</strong></font>
                     </a></button>
                 </ul>
               </div>
