--- a/templates/rest/index.html
+++ b/templates/rest/index.html
@@ -54,7 +54,7 @@
                     <td style="width:20%;vertical-align: top;">
                       <a href="detail?idno={{data.5}}" style="text-decoration:none">
                         <img src="data:;base64,{{data.4}}" width='130px' height='130px'><br /><br>
-                        <p class='underline' style='font-family: Nanum Pen Script;font-size:large;'>{{data.0}}</p>
+                        <p class='underline' style='font-family: Nanum Pen Script;font-size:x-large;'>{{data.0}}</p>
                       </a>
                     </td>
 
