--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -106,8 +106,8 @@
                     <option value="400">400m</option>
                     <option value="500">500m</option>
                 </select>
-
-                <button class='btn btn-dark' style='margin-top:20px' type="submit">통합검색</button>
+            
+                <button class='btn btn-default' style='margin-top:20px;color:#7F888F' type="submit">통합검색</button>
             </div>
 
         </form>
