--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -96,7 +96,7 @@
             </div>
 
             <div class='container' align='center'>
-                <a style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px;margin-top:70px'
+                <a style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px;margin-top:30px'
                     class="btn btn-white">거리를
                     설정하세요.</a><br>
                 <select name="distance" style=" margin-top:30px;">
@@ -106,8 +106,10 @@
                     <option value="400">400m</option>
                     <option value="500">500m</option>
                 </select>
-            
-                <button class='btn btn-default' style='margin-top:20px;color:#7F888F' type="submit">통합검색</button>
+            <br/>
+                <button class='btn btn-default' type="submit"
+              style="width:50%;color: #7F888F;font-family: Nanum Pen Script;font-size:x-large; margin-left:10px;margin-top:20px; text-decoration:none">통합검색</button>
+
             </div>
 
         </form>
