--- a/templates/rest/edit.html
+++ b/templates/rest/edit.html
@@ -3,27 +3,33 @@
 
 {% block content %}
 <html lang="en">
-
+<form action='edit' method='POST'>
 <body>
     <div class='container' align='center'>
-        <table class='table'>
-            <td colspan="2"><img src="data:;base64,{{image}}" width="370px" height="370px"></td>
+        <button type='submit' class='btn btn-default'style='margin-top:20px;font-size:xxx-large;color:#7F888F;'>수정완료</button>
+        <table class='table' style='border:0px solid rgb(0,0,0,0);'>
+            <tr style='border:0px solid rgb(0,0,0,0);'>
+            <td colspan="2" style="font-size: xxx-large;font-family: cookie;"><img src="data:;base64,{{image}}" width="370px" height="370px"><strong>수정페이지</strong></td><br/>
+            
             <td style="width: 70%;">
+            
                 <table class='table mytable' >
 
                     <tr align="center">
                         <td>
                             <a>
-                                <font size="7" face='Cookie' color="Black">
-                                    {{data.2}}
+                                <font size="7" face='Cookie' color="#3D4449">
+                                    {{data.2}}  
                                 </font>
+                                <input type='hidden' name='idno' value={{idno}}   />
                             </a>
 
 
                             <a>
-                                <font size="6" face='Nanum Pen Script' color="#7F888F">
-                                    {{data.4}}
-                                </font>
+                                
+                                <input type='text' name='cate' style="width:15%;color:#3D4449;font-family: Nanum Pen Script;font-size:x-large" class='form-control' value={{data.4}} required />
+
+                    
                             </a>
                         </td>
                     </tr>
@@ -44,15 +50,7 @@
                                     src='/static/icon/street-view.png' /></a><br /><br />
                             <a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'
                                 face='Comic Sans MS' class="btn btn-outline-danger" target="_blank">로드뷰</a></td>
-                                {% if request.session.login %}
-                                <td style='width:20%'>
-                                    
-                                    <button class='btn btn-default' onclick='location.href="/rest/edit"'>수정</button><button class='btn btn-default' onclick='location.href="/rest/index"'>삭제</button>
-                                    
-
-                                    
-                                </td>
-                                {% endif %}
+                                
 
                     </tr>
 
@@ -66,21 +64,22 @@
                                 <p style="font-family: Nanum Pen Script;color:#7F888F">
                                     <a style="font-size:x-large;"><strong>영업시간</strong></a><br/>
                                     <a style="font-size:large;">{% if data.7 == None %}
-                                    - 등록된 영업시간 정보가 없습니다.
+                                       <input type='text' name='week' style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large" class='form-control' value='' placeholder='등록된 영업시간 정보가 없습니다.'/>
+                                    
                                     {% else %}
-                                    - {{data.7}}
+                                    <input type='text' name='week' style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large" class='form-control' value ='{{data.7}}' required />
                                     {% endif %}</a><br/><br/>
                                     <a style="font-size:x-large;"><strong>주소</strong></a><br/>
                                     <a style="font-size:large;">{% if data.1 == None %}
-                                    - 등록된 주소가 없습니다.
+                                    <input type='text' name='addr' style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large" class='form-control' value='' placeholder='등록된 주소가 없습니다.'  />
                                     {% else %}                    
-                                    - {{data.1}}
+                                    <input type='text' name='addr' style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large" class='form-control' value='{{data.1}}' required />
                                     {% endif %} </a><br/><br/>                 
                                     <a style="font-size:x-large;"><strong>전화번호</strong></a><br/>
                                     <a style="font-size:large;">{% if data.3 == None %}
-                                    - 등록된 번호가 없습니다.
+                                        <input type='text' name='phone' style="width:90%;color:#7F888F;font-family: Nanum Pen Script;font-size:large" class='form-control'value='' placeholder='등록된 번호가 없습니다.'  />
                                     {% else %}
-                                    - {{data.3}}
+                                    <input type='text' name='phone' style="width:90%;color:#3D4449;font-family: Nanum Pen Script;font-size:large" class='form-control' value='{{data.3}}' required />
                                     {% endif %}</a></p>
                             </details>
                         </td>
@@ -89,9 +88,13 @@
                         <td>
                             <details>
                                 <summary style="width: 100%;resize:none;font-size:x-large;font-family: Cookie;color:#3D4449">메뉴</summary>
-                                <p style="font-size:large;font-family: Nanum Pen Script;color:#7F888F">{% for tmp in menu %}
-                                     - {{tmp}}<br/>
-                                    {% endfor %}</p>
+                                <p>{% if menu == '' %}
+                                    <textarea placeholder='등록된 메뉴 정보가 없습니다.' rows=15 name='menu' style="width:100%;resize:none;font-size:large;font-family: Nanum Pen Script;color:#3D4449"  class='form-control'></textarea>
+                                    {% else %}
+                                    <textarea rows=15 name='menu' style="width:100%;resize:none;font-size:large;font-family: Nanum Pen Script;color:#3D4449" class='form-control' required>{{menu}}</textarea>
+                                    {% endif %}
+                                    <br/>
+                                    </p>
                             </details>
                         </td>
                     </tr>
@@ -101,8 +104,9 @@
                     
                 </table>
             </td>
+        </tr>
 </body>
-
+</form>
 </div>
 
 
