--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -48,7 +48,7 @@
                                 <td style='width:20%;text-align:middle;'>
                                     
                                     <button type='submit' class='btn btn-input' style='width:60px;font-size:x-large;font-family: Nanum Pen Script;color:#3D4449;'onclick='location.href="/rest/edit?idno={{data.0}}"'>수정</button><br/>
-                                    <button class='btn btn-input' style='margin-top:5px;width:60px;font-size:x-large;font-family: Nanum Pen Script;color:#3D4449;' onclick='location.href="/rest/index?idno={{data.0}}"'>삭제</button>
+                                    <button class='btn btn-input' style='margin-top:5px;width:60px;font-size:x-large;font-family: Nanum Pen Script;color:#3D4449;' onclick='location.href="/rest/delete?idno={{data.0}}"'>삭제</button>
                                     
 
                                     
