--- a/templates/rest/edit.html
+++ b/templates/rest/edit.html
@@ -38,18 +38,18 @@
                     <tr align='center'>
                         <td style='width:20%'><a href='https://map.kakao.com/?itemId={{data.0}}' target="_blank"><img type='image/png'
                                     width="60" height="60" src='/static/icon/map.png' /></a><br /><br />
-                            <a href='https://map.kakao.com/?itemId={{data.0}}' face='Comic Sans MS'
+                            <a href='https://map.kakao.com/?itemId={{data.0}}' face='Nanum Pen Script'
                                 class="btn btn-outline-success" target="_blank">지도보기</button></td>
                         <td style='width:20%'><a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}'
                                 target="_blank"> <img type='image/png' width="60" height="60"
                                     src='/static/icon/route.png' /></a><br /><br />
                             <a href='https://map.kakao.com/?map_type=TYPE_MAP&target=walk&rt=975771,486419,{{data.11}},{{data.12}}&rt1=한가람IT&rt2={{data.2}}&rtIds=,{{data.0}}'
-                                face='Comic Sans MS' class="btn btn-outline-primary" target="_blank">길찾기</a></td>
+                                face='Nanum Pen Script' class="btn btn-outline-primary" target="_blank">길찾기</a></td>
                         <td style='width:20%'><a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'
                                 target="_blank"><img type='image/png' width="60" height="60"
                                     src='/static/icon/street-view.png' /></a><br /><br />
                             <a href='https://map.kakao.com/?srcid={{data.0}}&confirmid={{data.0}}&q={{data.2}}&rv=on'
-                                face='Comic Sans MS' class="btn btn-outline-danger" target="_blank">로드뷰</a></td>
+                                face='Nanum Pen Script' class="btn btn-outline-danger" target="_blank">로드뷰</a></td>
                                 
 
                     </tr>
