--- a/templates/rest/base.html
+++ b/templates/rest/base.html
@@ -14,6 +14,7 @@
     rel="stylesheet" />
     <link href="/static/css/logmain.css" rel="stylesheet" />
     <link href="/static/css/logutil.css" rel="stylesheet" />
+    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
   <title>R.I.P</title>
 
   <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
