--- a/templates/rest/detail.html
+++ b/templates/rest/detail.html
@@ -46,9 +46,9 @@
                                 face='Comic Sans MS' class="btn btn-outline-danger" target="_blank">로드뷰</a></td>
                                 {% if request.session.login %}
                                 <td style='width:20%;text-align:middle;'>
-                                    
-                                    <button type='submit' class='btn btn-input' style='width:60px;font-size:x-large;font-family: Nanum Pen Script;color:#3D4449;'onclick='location.href="/rest/edit?idno={{data.0}}"'>수정</button><br/>
-                                    <button class='btn btn-input' style='margin-top:5px;width:60px;font-size:x-large;font-family: Nanum Pen Script;color:#3D4449;' onclick='location.href="/rest/delete?idno={{data.0}}"'>삭제</button>
+                                    <br/>
+                                    <button type='submit' class='btn btn-input' style='width:70px;font-size:large;font-family: Cookie;color:#3D4449;'onclick='location.href="/rest/edit?idno={{data.0}}"'>수정</button><br/>
+                                    <button class='btn btn-input' style='margin-top:5px;width:70px;font-size:large;font-family: Cookie;color:#3D4449;' id='delbtn' onclick='button_event()'>삭제</button>
                                     
 
                                     
@@ -110,7 +110,19 @@
 </body>
 
 
-
+<script type="text/javascript">
+    
+    function button_event(){
+    if (confirm("정말 삭제하시겠습니까??") == true){    //확인
+        location.href="/rest/delete?idno={{data.0}}"
+    }else{   //취소
+        return;
+    }
+    }
+    
+    </script>
+    
+ 
 
 
 {% endblock %}
