--- a/templates/rest/search.html
+++ b/templates/rest/search.html
@@ -13,11 +13,21 @@
             <div align='center' style='margin-top:16px'>
                 <font size='7' color="#3D4449" face='comic sans ms'>Restaurant In Program</font>
             </div>
-            <div class="container" align='center' style='margin-top:50px;'>
+            <table type='table' class="container" align='center' style='margin-top:50px;'>
+                <tr>
+                    <td style='width:25%;'></td>
+                    <td style='width:50%;'>
                 <a style='font-family: Nanum Pen Script;font-size:xx-large;color:#7F888F;width:430px'
                     class="btn btn-white">카테고리를 선택하세요
-                    (복수선택 가능)</a>
-            </div>
+                    (복수선택 가능)</a></td>
+                    <td class='chkall' style="width:25%;margin-top:30px;font-family:'Cookie'; font-size: large; color:#7F888F;vertical-align:middle; border:2px solid #f56a6a;text-align: center;">
+                       
+                    <input type="checkbox"  id='cball' value='모두선택'>
+                    <label for='cball' id='cball' style="font-size:1.2em;"><span></span>모두 선택</label>
+                
+                </td>
+                </tr>
+            </table>
         </div>
         <form class="form-inline my-2 my-lg-0" action="board" method="GET">
             
@@ -120,6 +130,24 @@
 
 
 </body>
+<script>
+$(document).ready(function(){
+    //최상단 체크박스 클릭
+    $("#cball").click(function(){
+        //클릭되었으면
+        if($("#cball").prop("checked")){
+            //input태그의 name이 chk인 태그들을 찾아서 checked옵션을 true로 정의
+            $(".all_agree input[type=checkbox]").prop("checked",true);
+            //클릭이 안되있으면
+        }else{
+            //input태그의 name이 chk인 태그들을 찾아서 checked옵션을 false로 정의
+            $(".all_agree input[type=checkbox]").prop("checked",false);
+        }
+    })
+})
+</script>
+
+
 {% endblock %}
 
 </html>
